# quintessence

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  builder.cmake  config.cmake  config.xml  config_new.cmake
KRAL/: KRALConfig.cmake  KRALMain.cmake  build.cmake  builder.cmake
KRAL/android-cmake/: README.txt
KRAL/android-cmake/scripts/: get_ndk_linux.sh  get_ndk_toolchain_linux.sh
KRAL/android-cmake/toolchain/: android.toolchain.cmake
KRAL/linux/: kbuild
KRAL/osx/: kbuild
SDLDemo/: CMakeLists.txt  SDLDemo.plist
SDLDemo/include/: Enemy.h  GameHUDScene.h  GameScene.h  GameScreen.h  IGameScreen.h  IRenderScene.h  LoadingScene.h  LoadingScreen.h  MainMenuScene.h  MainMenuScreen.h  MathUtils.h  ScreenManager.h  TestGame.h  Turret.h
SDLDemo/include/anim/: AAAgregator.h  AAConstSpeedMove.h  AAConstSpeedRotate.h  AAFunctionExecutor.h  Animator.h  AnimatorsManager.h  IAnimationAction.h
SDLDemo/runtime/android/src/ro/qui/SDLDemo/: SDLDemoActivity.java
SDLDemo/runtime/android/src/ro/qui/apps/: SDLDemoActivity.java
SDLDemo/runtime/common/assets/: game_props.xml  resource_list.lua  resource_list.xml  standard_tex.fsh  standard_tex.vsh  test.tga  testfont.fnt
SDLDemo/source/android/: SDL_android_main.c
SDLDemo/source/common/: Enemy.cpp  GameHUDScene.cpp  GameScene.cpp  GameScreen.cpp  LoadingScene.cpp  LoadingScreen.cpp  Main.cpp  MainMenuScene.cpp  MainMenuScreen.cpp  MathUtils.cpp  ScreenManager.cpp  TestGame.cpp  Turret.cpp
SDLDemo/source/common/anim/: AAAgregator.cpp  AAConstSpeedMove.cpp  AAConstSpeedRotate.cpp  Animator.cpp  AnimatorsManager.cpp
editor/: CMakeLists.txt
editor/source/common/: GameInterface.h  OpenGLWidget.cpp  OpenGLWidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
tools/: build_sdl.cmake
